--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
  <script type="text/javascript" src="script.js"></script>
 
 
+
 </head>
 <body>
 
 <div id="header">
 <div id="c">
-<h1>__1981__</h1>
+<h1><font face="Nikaia"><i>_1981_</i></font></h1>
 </div>
 
 <div id="b">
 <img src="8.png"/>
 
 </div>
-<div id="a">
-<p><a href = "http://google.com">Home</a> About Work Blog Contact</p>
-</div>
+
 <div id="d">
-<form>
-<input type="username" value="Enter Password"/>
+<form >
+<input type="username"
+style="
+color: 7b7a6d;
+font-size:14px;
+border-color: 7b7a6d;
+border-width: 1px;
+border-radius: 6px; 
+height:28px;
+width:112px;
+font-weight: normal; 
+font-family: Myriad Pro; 
+background-image:url(pass.png);
+background-repeat:no repeat;"
+ value="&nbsp Enter Password" 
+  >
 </form>
 </div>
 <div id="e">
@@ -125,16 +138,16 @@ pharetra. Nunc commodo alliquam lectus  quis  bibendum.
 <img src="ns.png"/>
 </div>
 <div id="z">
-<img src="su.png"/>
+<a href="http://google.com>"><img src="su.png"/></a>
 </div>
 <div id="ab">
-<img src="f.png"/>
+<a href="http://twitter.com"><img src="f.png"/></a>
 </div>
 <div id="bc">
-<font face="Myriad Pro" color="E5E2BC"><i>http://www.themeforest.net</i></font>
+<a href="http://www.themeforest.net"><font face="Myriad Pro" color="E5E2BC"><i>http://www.themeforest.net</i></font></a>
 </div>
 <div id="cd">
-<img src="rt.png"/>
+<a href="http://retweet.com"><img src="rt.png"/></a>
 </div>
 <div id="de">
 <pre><font face="Myriad Pro" color="#8e4423" size="4px" weight="900"><i><b>Flickr                                                                                               Featured Clients                                                Our Friends                                            Pages</b></i></font></pre>
@@ -170,14 +183,37 @@ pharetra. Nunc commodo alliquam lectus  quis  bibendum.
 <div id="jk">
 <pre><h13>Copyright 2011|Nineteen Eighty One                                                                                                                                                                  FAQ    /    Privacy Policy    / API    /    Advertise</h13></pre>   
 </div>
-<div id="kl">
-<img src="s.png" id="my picture"/>
-
-
-<a href="javascript:processPrevious()" id="prevLink">&laquo;Previous</a>&nbsp;&nbsp;       <a href="javascript:processNext()" id="nextLink">Next&raquo;</a>
+ <div align="center" id="kl">
+   <img src="s.png" id="myPicture" />
+   </div>
+   <div id="lm">
+   <a href="previous.html" id="prevLink"><img src="29.png"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;;&nbsp;&nbsp;;&nbsp;&nbsp <a href="next.html" id="nextLink"><img src="28.png"/></a>
+   </div>
+<div id="ax">
+<h15>
+<nav>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		
+		<li><a href="http://google.com">About</a>
+			
+		</li>
+		<li><a href="#">Work</a>
+			<ul>
+				<li><a href="#">Web</a></li>
+				<li><a href="#">Logo/Corp ID</a></li>
+				<li><a href="#">Print Design</a>
+				<li><a href="#">Mobile Design & Development</a>
+					
+				</li>
+			</ul>
+		</li>
+		<li><a href="#">Blog</a></li>
+		<li><a href="#">Contact</a></li>
+	</ul>
+</nav>
+</h15>
 </div>
 </div>
-<script src="script.js"></script>
-
 </body>
 </html>
